# melovitui

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: app.rs  audio.rs  audio_system.rs  config.rs  logger.rs  main.rs  state.rs
src/controls/: audio.rs  audio_engine.rs  audio_processor.rs  keybindings.rs  mod.rs  music_library.rs  playback_control.rs  playback_engine.rs  playback_state.rs  sound_control.rs  spectrum.rs  visualizer.rs
src/ui/: mod.rs  view.rs
src/ui/components/: audio_gauge.rs  help_ui.rs  mod.rs  music_library_ui.rs  playback_control_ui.rs  sound_control_ui.rs  visualizer_ui.rs
