[package]
name = "melovitui"
version = "1.2.0"
edition = "2021"

[dependencies]
apodize = "1.0.0"
chrono = "0.4.38"
clap = {version = "4.5.21", features = ["derive"]}
directories = "5.0.1"
lazy_static = "1.5.0"
libc = "0.2.166"
log = "0.4.22"
log4rs = "1.3.0"
parking_lot = "0.12.3"
rand = "0.8.5"
ratatui = "0.29.0"
rodio = "0.20.1"
rustfft = "6.2.0"
serde = "1.0.215"
serde_json = "1.0.133"
symphonia = {version = "0.5.4", features = ["all"]}
walkdir = "2.5.0"
